force-app/main/default/objects/Employeeinformation__c/Employeeinformation__c.object-meta.xml
<CustomObject>
    <label>Employee information</label>
    <nameField>
        <displayFormat>EI-{0000}</displayFormat>
        <label>Employee Information ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>