force-app/main/default/objects/Employeeinformation__c/fields/BankBranchName__c.field-meta.xml
<CustomField>
    <fullName>BankBranchName__c</fullName>
    <label>Bank Branch Name</label>
    <type>TextArea</type>
</CustomField>