force-app/main/default/objects/Employeeinformation__c/fields/BeneficiaryBank__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryBank__c</fullName>
    <label>Beneficiary Bank</label>
    <type>TextArea</type>
</CustomField>