force-app/main/default/objects/Employeeinformation__c/fields/CurrentAddress__c.field-meta.xml
<CustomField>
    <fullName>CurrentAddress__c</fullName>
    <label>Current Address</label>
    <type>TextArea</type>
</CustomField>