force-app/main/default/objects/Employeeinformation__c/fields/EmployeeIDNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeIDNumber__c</fullName>
    <label>Employee ID Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>