force-app/main/default/objects/Employeeinformation__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <label>Full Name</label>
    <type>TextArea</type>
</CustomField>