force-app/main/default/objects/Employeeinformation__c/fields/IDissuedby__c.field-meta.xml
<CustomField>
    <fullName>IDissuedby__c</fullName>
    <label>ID issued by</label>
    <type>TextArea</type>
</CustomField>