force-app/main/default/objects/Employeeinformation__c/fields/IDNumber__c.field-meta.xml
<CustomField>
    <fullName>IDNumber__c</fullName>
    <label>ID Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>