force-app/main/default/objects/Employeeinformation__c/fields/JoinedDate__c.field-meta.xml
<CustomField>
    <fullName>JoinedDate__c</fullName>
    <label>Joined Date</label>
    <type>Date</type>
</CustomField>