force-app/main/default/objects/Employeeinformation__c/fields/Personalemail__c.field-meta.xml
<CustomField>
    <fullName>Personalemail__c</fullName>
    <label>Personal Email</label>
    <type>Email</type>
</CustomField>