force-app/main/default/objects/Employeeinformation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AddressPermanent__c</columns>
    <columns>BankAccountNumber__c</columns>
    <columns>BeneficiaryBank__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CurrentAddress__c</columns>
    <columns>DayofBirth__c</columns>
    <columns>EmployeeIDNumber__c</columns>
    <columns>FullName__c</columns>
    <columns>Gender__c</columns>
    <columns>IDNumber__c</columns>
    <columns>Married_status__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>Personalemail__c</columns>
    <columns>PersonalTaxCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>